added more content, updated the nav bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- h1 font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Cinzel:wght@400..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 
     <!-- font for the text -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,17 +38,17 @@
         <nav class="navbar">
             <div class="nav-container">
                 <ul class="nav-links">
-                    <li>New</li>
-                    <li>Clothing</li>
-                    <li>Dresses</li>
-                    <li>Tops</li>
-                    <li>Jeans</li>
-                    <li>Sweaters</li>
-                    <li>Weddings</li>
-                    <li>Shoes</li>
-                    <li>Bags</li>
-                    <li>Edits</li>
-                    <li>Sustainability</li>
+                    <li><a href="https://salk.se/">New</a></li>
+                    <li><a href="https://salk.se/">Clothing</a></li>
+                    <li><a href="https://salk.se/">Dresses</a></li>
+                    <li><a href="https://salk.se/">Tops</a></li>
+                    <li><a href="https://salk.se/">Jeans</a></li>
+                    <li><a href="https://salk.se/">Sweaters</a></li>
+                    <li><a href="https://salk.se/">Weddings</a></li>
+                    <li><a href="https://salk.se/">Shoes</a></li>
+                    <li><a href="https://salk.se/">Bags</a></li>
+                    <li><a href="https://salk.se/">Edits</a></li>
+                    <li><a href="https://salk.se/">Sustainability</a></li>
                 </ul>
             </div>
         </nav>
@@ -61,34 +63,34 @@
 
             <div class="dresses-container">
                 <div class="dress-item">
-                    <img src="https://media.thereformation.com/image/list/fn_select:jq:first(.%5B%5D%7Cif%20has(%22metadata%22)%20then%20select(any(.metadata%5B%5D;%20.external_id%20==%20%22sfcc-gallery-position%22%20and%20.value%20==%202))%20else%20empty%20end)/f_auto,q_auto,dpr_2.0/w_600/1316493-CHN.json?_s=RAABAB0"
+                    <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1314547/MOREL/1314547.2.MOREL?_s=RAABAB0"
                         alt="Black Tie">
-                    <p>Black Tie</p>
+                    <h3>Black Tie</h3>
                 </div>
                 <div class="dress-item">
                     <img src="https://media.thereformation.com/image/list/fn_select:jq:first(.%5B%5D%7Cif%20has(%22metadata%22)%20then%20select(any(.metadata%5B%5D;%20.external_id%20==%20%22sfcc-gallery-position%22%20and%20.value%20==%202))%20else%20empty%20end)/f_auto,q_auto,dpr_2.0/w_600/1312571-PTN.json?_s=RAABAB0"
                         alt="Bra-friendly">
-                    <p>Bra-friendly</p>
+                    <h3>Bra-friendly</h3>
                 </div>
                 <div class="dress-item">
                     <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1316847/CHOCOLATE_SEQUIN/1316847.2.CHOCOLATE_SEQUIN?_s=RAABAB0"
                         alt="Bridesmaids">
-                    <p>Bridesmaids</p>
+                    <h3>Bridesmaids</h3>
                 </div>
                 <div class="dress-item">
                     <img src="https://media.thereformation.com/image/list/fn_select:jq:first(.%5B%5D%7Cif%20has(%22metadata%22)%20then%20select(any(.metadata%5B%5D;%20.external_id%20==%20%22sfcc-gallery-position%22%20and%20.value%20==%202))%20else%20empty%20end)/f_auto,q_auto,dpr_2.0/w_600/1314260-AEV.json?_s=RAABAB0"
                         alt="Green Dresses">
-                    <p>Green Dresses</p>
+                    <h3>Green Dresses</h3>
                 </div>
                 <div class="dress-item">
                     <img src="https://media.thereformation.com/image/list/fn_select:jq:first(.%5B%5D%7Cif%20has(%22metadata%22)%20then%20select(any(.metadata%5B%5D;%20.external_id%20==%20%22sfcc-gallery-position%22%20and%20.value%20==%202))%20else%20empty%20end)/f_auto,q_auto,dpr_2.0/w_600/1316063-BLK.json?_s=RAABAB0"
                         alt="Black Dresses">
-                    <p>Black Dresses</p>
+                    <h3>Black Dresses</h3>
                 </div>
                 <div class="dress-item">
                     <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1315672/GOLDEN_HAZE_LEATHER/1315672.1.GOLDEN_HAZE_LEATHER?_s=RAABAB0"
                         alt="Occasion Shoes">
-                    <p>Occasion Shoes</p>
+                    <h3>Occasion Shoes</h3>
                 </div>
             </div>
         </div>
