update html and css

--- a/index.html
+++ b/index.html
@@ -4,31 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Connect to the CSS file -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Don't forget to change the title and connect the CSS file -->
     <title>Aurora</title>
-
-    <!-- h1 font  -->
+    <!-- Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Cinzel:wght@400..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-
-    <!-- font for the text -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
-        rel="stylesheet">
-
 </head>
 
-<!-- Don't forget to connect the JavaScript file -->
 
 <body>
-
 
     <header class="hero">
         <div class="hero-h1">
@@ -52,68 +42,67 @@
                 </ul>
             </div>
         </nav>
-
     </header>
-    <section class="movie-library">
 
 
-        <div class="wedding-guest-section">
-            <h2>Wedding Guest Dresses</h2>
-            <p>In case of being the best dressed guest. Wedding guest dresses are right here.</p>
 
-            <div class="dresses-container">
-                <div class="dress-item">
-                    <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1314547/MOREL/1314547.2.MOREL?_s=RAABAB0"
-                        alt="Black Tie">
-                    <h3>Black Tie</h3>
-                </div>
-                <div class="dress-item">
-                    <img src="https://media.thereformation.com/image/list/fn_select:jq:first(.%5B%5D%7Cif%20has(%22metadata%22)%20then%20select(any(.metadata%5B%5D;%20.external_id%20==%20%22sfcc-gallery-position%22%20and%20.value%20==%202))%20else%20empty%20end)/f_auto,q_auto,dpr_2.0/w_600/1312571-PTN.json?_s=RAABAB0"
-                        alt="Bra-friendly">
-                    <h3>Bra-friendly</h3>
-                </div>
-                <div class="dress-item">
-                    <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1316847/CHOCOLATE_SEQUIN/1316847.2.CHOCOLATE_SEQUIN?_s=RAABAB0"
-                        alt="Bridesmaids">
-                    <h3>Bridesmaids</h3>
-                </div>
-                <div class="dress-item">
-                    <img src="https://media.thereformation.com/image/list/fn_select:jq:first(.%5B%5D%7Cif%20has(%22metadata%22)%20then%20select(any(.metadata%5B%5D;%20.external_id%20==%20%22sfcc-gallery-position%22%20and%20.value%20==%202))%20else%20empty%20end)/f_auto,q_auto,dpr_2.0/w_600/1314260-AEV.json?_s=RAABAB0"
-                        alt="Green Dresses">
-                    <h3>Green Dresses</h3>
-                </div>
-                <div class="dress-item">
-                    <img src="https://media.thereformation.com/image/list/fn_select:jq:first(.%5B%5D%7Cif%20has(%22metadata%22)%20then%20select(any(.metadata%5B%5D;%20.external_id%20==%20%22sfcc-gallery-position%22%20and%20.value%20==%202))%20else%20empty%20end)/f_auto,q_auto,dpr_2.0/w_600/1316063-BLK.json?_s=RAABAB0"
-                        alt="Black Dresses">
-                    <h3>Black Dresses</h3>
-                </div>
-                <div class="dress-item">
-                    <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1315672/GOLDEN_HAZE_LEATHER/1315672.1.GOLDEN_HAZE_LEATHER?_s=RAABAB0"
-                        alt="Occasion Shoes">
-                    <h3>Occasion Shoes</h3>
-                </div>
+    <div class="hero-image">
+        <img src="https://images.selfridges.com/is/image/selfridges/190708_ReformationArtboard_3_MOBILE?scl=1&qlt=60,1"
+            alt="Girl laying on the grass">
+        <div class="text-overlay">
+            <h2>Why we all want to be wearing Aurora</h2>
+            <p>Good news: Aurora's sustainability team is good at science and 100% of our stuff recyclable.</p>
+        </div>
+    </div>
+
+
+
+    <div class="container">
+        <h2>Being naked is the #1 most sustainable option. We're #2.</h2>
+        <div class="grid">
+            <div class="item">
+                <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1314547/MOREL/1314547.2.MOREL?_s=RAABAB0"
+                    alt="Red Dress">
+                <h3>Dresses</h3>
+            </div>
+            <div class="item">
+                <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1316165/CHIANTI/1316165.1.CHIANTI?_s=RAABAB0"
+                    alt="Essentials">
+                <h3>Essentials</h3>
+            </div>
+            <div class="item">
+                <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1313276/WHEAT/1313276.1.WHEAT?_s=RAABAB0"
+                    alt="The Fall Edit">
+                <h3>The Fall Edit</h3>
+            </div>
+            <div class="item">
+                <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_2.0/w_600/PRD-SFCC/1316409/KEILA/1316409.4.KEILA?_s=RAABAB0"
+                    alt="Hot Right Now">
+                <h3>Hot Right Now</h3>
             </div>
         </div>
+    </div>
 
 
-        <!-- Filter and Sorting Controls -->
-        <div class="controls">
 
+    <div class="container 1"></div>
+    <div class="image-container">
+        <div class="image-left">
+            <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_auto/w_600/PRD-SFCC/1316674/CAMEL/1316674.2.CAMEL?_s=RAABAB0"
+                alt="Model standing by a fence">
         </div>
+        <div class="image-right">
+            <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_auto/w_600/PRD-SFCC/1316322/CAMEL_NAVY/1316322.1.CAMEL_NAVY?_s=RAABAB0"
+                alt="Model with horse">
+            <div class="text-overlay">
+                <h2>Horse girl</h2>
+                <p>Great hair, yearning to break free</p>
+            </div>
+        </div>
+    </div>
+    </div>
 
 
-
-        <select id="filterDropdown">
-            <option value="title">Sort by Title</option>
-            <option value="price">Sort by Price</option>
-            <option value="colors">Sort by Colors</option>
-        </select>
-
-
-    </section>
-
-
-    <!-- Movie Cards (grid) -->
     <section class="container" id="container">
     </section>
 
